name:                Hlisp
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dinnu93/Hlisp#readme
license:             BSD3
license-file:        LICENSE
author:              Dinesh Padisetti
maintainer:          dinesh.padisetti@gmail.com
copyright:           Copyright: (c) 2016 Dinesh Padisetti
category:            Scheme Interpreter
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , bytestring
  default-language:    Haskell2010

executable Hlisp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Hlisp
                     , parsec
                     , bytestring
  default-language:    Haskell2010

test-suite Hlisp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Hlisp
                     , parsec
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dinnu93/Hlisp
